fix issue with dates alignment

--- a/content/site.css
+++ b/content/site.css
@@ -25,7 +25,7 @@ header {
 }
 .seven-cols {
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
 }
 .seven-cols .col-1 {
   width: calc(100% / 7);
@@ -48,12 +48,18 @@ h1 {
   cursor: pointer;
 }
 
-.card div.new-event, .card:hover div.events:hover + div.new-event {
+.card div.new-event,
+.card:hover div.events:hover + div.new-event {
   display: none;
 }
 
-.card:hover div.new-event, .card:hover div.new-event.alert {
+.card:hover div.new-event,
+.card:hover div.new-event.alert {
   display: block;
+}
+
+.blah {
+  margin-left: auto;
 }
 
 @media (max-width: 576px) {
